# minesweeper

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt
include/sweep/: util.h  views.h
include/sweep/util/: geometry.h  state.h  types.h
include/sweep/views/: grid_view.h  view.h
src/: main.cpp
src/util/: state.cpp
src/views/: grid_view.cpp  view.cpp
